--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.14.2",
     "@nuxtjs/strapi": "^1.11.0",
+    "composition-api": "^0.0.0",
     "nuxt": "^3.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
